fix(Video): layout issue

--- a/src/routes/MetaDetails/VideosList/Video/styles.less
+++ b/src/routes/MetaDetails/VideosList/Video/styles.less
@@ -62,10 +62,6 @@
         justify-content: center;
         padding: 0 0.5rem 0 1.5rem;
 
-        &:first-child {
-            height: 3rem;
-        }
-
         .title-container {
             display: -webkit-box;
             -webkit-line-clamp: 2;
